--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 body {
   font-size: 20px;
   height: 100vh;
-  padding: 3em;
+  padding: calc(2rem + 2vw) calc(0.25rem + 4vw);
   background-color: var(--color-background);
   color: var(--color-tile-primary);
 }
@@ -58,8 +58,9 @@ button:active {
 }
 
 .tile {
-  width: 4.5rem;
-  height: 4.5rem;
+  max-width: 4.5rem;
+  max-height: 4.5rem;
+
   font-weight: 700;
   background-color: var(--color-background);
   border: 1px solid var(--color-tile-primary);
@@ -245,4 +246,45 @@ button:active {
 
 .instruction div {
   height: 100%;
+}
+
+@media (max-width: 815px) {
+  .key-button {
+    /* min-width: 3rem; */
+    margin: 0.25em;
+  }
+
+  .pop-up-container:not(.invalid-message) {
+    width: 18em;
+  }
+}
+
+.keyBoard {
+  width: 100%;
+}
+
+.keyBoard .row {
+}
+
+.gameBoard {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.gameBoard > div {
+  display: flex;
+  flex-direction: column;
+}
+
+.gameBoard .row {
+  flex: 1 1;
+  align-items: center;
+}
+
+.row > .tile {
+  flex: 1 1;
+  aspect-ratio: 1/1;
 }
